[project]
name = "vbdb-data"
version = "0.1.0"
description = "Tools for gathering the data needed for the volleyballdatabased.com page"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "lxml>=5.3.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "ruff>=0.9.9",
    "ruff-lsp>=0.0.62",
    "seleniumbase>=4.34.15",
]
